--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
    --secondary-text-color:#757575;
    --activ-text-color:#2196F3;
    --hero-text-color:#FFFFFF;
-   --primery-background-color:#F5F5F5;
+   --primery-background-color:Frgba(255, 255, 255, 1);
    --hero-background-color:#2F303A;
    --header-background-color:#FFFFFF;
    --section-background-color:#F5F4FA;
@@ -211,6 +211,7 @@ body{
 .card{
     background-color: rgba(255, 255, 255, 1);
     margin-right: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .card:nth-child(4n){
     margin-right: 0;
@@ -278,12 +279,12 @@ body{
     color: #212121;
     background-color: var(--section-background-color);
     border-radius: 4px;
-    border-color: rgba(245, 244, 250, 1);
     margin-right: 8px;
     padding-left: 22px;
     padding-top: 6px;
     padding-right: 22px;
     padding-bottom: 6px ;
+    border: transparent;
   
     
 }
@@ -306,12 +307,20 @@ body{
 .main-list .item{
     margin-right: 30px;
     margin-bottom: 30px;
+   
+
 }
 .main-list .item:nth-child(3n+3) {
     margin-right: 0;
 }
 .main-list .item:nth-last-child(-n+3){
     margin-bottom: 0;
+}
+.bottom-list{
+    background-color: rgba(255, 255, 255, 1);
+    border-bottom: 1px solid rgba(238, 238, 238, 1); 
+    border-left:1px solid rgba(238, 238, 238, 1) ; 
+    border-right: 1px solid rgba(238, 238, 238, 1);
 }
 .small-title{
     color: var(--primary-text-color);
@@ -320,7 +329,7 @@ body{
     line-height: 2;
     letter-spacing: 0.06em;
     text-align: left;
-    margin-top: 20px;
+    padding-top: 20px;
     margin-left: 24px;
 }
 .small-text{
