--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ html{
 }
    /* header */
    .container{
-    width: 1230px;
+    width: 1200px;
     padding-right: 15px;
     padding-left: 15px;
     margin: 0 auto;
@@ -32,7 +32,7 @@ html{
  }
  .main-nav{
     display: flex;
-align-items: center;
+    align-items: center;
  }
  .logo{
     color: var(--activ-text-color);
@@ -58,7 +58,7 @@ align-items: center;
  }
  .site-nav{
     display: flex;
-    margin-right: 354px;
+    margin-right: auto;
  }
  .site-nav .item:not(:last-child) {
 margin-right: 50px;
@@ -79,6 +79,7 @@ margin-right: 50px;
  }
  .auth-nav{
     display: flex;
+    margin-left: auto;
  }
  .auth-nav .item:not(:last-child){
     margin-right: 40px;
@@ -111,10 +112,9 @@ body{
 /* hero */
 .hero{
     background-color: var(--hero-background-color);
-    max-width: 1600px;
     text-align: center;
     padding-bottom: 200px;
-   
+    padding-top: 200px;
    
 }
 .hero-title{
@@ -124,7 +124,6 @@ body{
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
-    padding-top: 200px;
     margin-bottom: 30px;
 }
 /* button */
@@ -152,9 +151,14 @@ body{
     padding-top: 94px;
     padding-bottom: 94px;
 }
+.features{
+padding-bottom: 0;
+}
 .preference{
     display: flex;
- 
+}
+.preference-list{
+    width: 270px;
 }
 .preference-list:not(:last-child){
     margin-right: 30px;
@@ -201,9 +205,7 @@ body{
     font-size: 16px;
     letter-spacing: 0.03em;
     line-height: 1.18;
-    margin-top: 30px;
     margin-bottom: 10px;
-    text-align: center;
 }
 .main-team{
     display: flex;
@@ -220,13 +222,17 @@ body{
     color: var(--secondary-text-color);
     line-height: 1.71;
     letter-spacing: 0.03em;
+}
+.bottom-card{
+    padding-top: 30px;
+    padding-bottom: 30px;
     text-align: center; 
-    margin-bottom: 30px;
 }
 /* footer */
 .footers{
     background-color: var(--hero-background-color);
-   
+   padding-top: 60px ;
+   padding-bottom: 60px;
 }
 .footer-logo{
    display: inline-block;
@@ -237,7 +243,7 @@ body{
     font-size: 26px;
     letter-spacing: 0.03em;
     line-height: 1.18;
-    margin-top: 60px;
+    
   
 
 }
@@ -258,13 +264,9 @@ body{
     letter-spacing: 0.03em;
     margin-top: 12px;
 }
-.link-footer:last-child{
-    margin-bottom: 60px;
-}
+
 /* portfolio */
-/* .content{
-   background-color: var(--primery-background-color);
-} */
+
 .buttons{
     display: flex;
     justify-content: center;
@@ -321,6 +323,10 @@ body{
     border-bottom: 1px solid rgba(238, 238, 238, 1); 
     border-left:1px solid rgba(238, 238, 238, 1) ; 
     border-right: 1px solid rgba(238, 238, 238, 1);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 .small-title{
     color: var(--primary-text-color);
@@ -329,8 +335,7 @@ body{
     line-height: 2;
     letter-spacing: 0.06em;
     text-align: left;
-    padding-top: 20px;
-    margin-left: 24px;
+   
 }
 .small-text{
 color: var(--secondary-text-color);
@@ -339,8 +344,6 @@ line-height: 1.87;
 letter-spacing: 0.03em;
 text-align: left;
 margin-top: 4px;
-margin-bottom: 20px;
-margin-left: 24px;
 }
 
 
